# Langgraph_Tutorials

./: Stock_Market_Agent.py  chatbot.db-shm  chatbot.db-wal  pyproject.toml  requirements.txt  todos.json  yfinance_test.py
Agents/: Agent13_Routing_workflow.ipynb  Agent15_Evaluator-optimizer_workflow.ipynb  Agent6_with_tools.ipynb  Agent7_ONLY_tool_call.ipynb  Agent7_tool_call_AGENT.ipynb  Agent9_HITL.ipynb
Chatbot/: app.py  main.py
Database_Agent/: MY_DB.db  database_agent.ipynb
Files_Management_Agent/: main.ipynb
Graphs/: graph9_complex_workflow.ipynb
Software_Builder_Agent/: main-2.ipynb  main.ipynb
Software_Builder_Agent/calculator_app/: README.md  main.py  requirements.txt  run.py  setup.py  test_calculator.py
Software_Builder_Agent/python_todo_app/: README.md  requirements.txt  run_todo.bat  run_todo.py  test_todo_app.py  todo_app.py
Software_Builder_Agent/src/: graph.ipynb  prompts.py  states.py  tools.py
notebooks/Agents/: Agent13.2_Routing_Tools.ipynb  Agent13.2_Routing_with_Research.ipynb  Agent13_Routing_workflow.ipynb  Agent14_Orchestrator-Worker_workflow.ipynb  Agent15.2_Evaluator_Alternative.ipynb  Agent15_Evaluator-Optimizer.ipynb  Agent16_customer_reply.ipynb  Agent18_agentic_RAG.ipynb  Agent19_independent_state_subgraphs.ipynb  Agent20_shared_state_subgraphs.ipynb  Agent20_shared_subgraphs.ipynb  Agent21_Supervise_Multi_Agents.ipynb  Agent22_langchain_agents.ipynb
notebooks/Graphs/: graph10_batsman_workflow.ipynb
