[project]
name = "langgraph-tut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.7",
    "numexpr>=2.14.1",
    "ollama>=0.6.1",
    "wikipedia>=1.4.0",
    "yfinance>=1.1.0",
]
