[project]
name = "langgraph-tut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.13.2",
    "groq>=0.37.1",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-tavily>=0.2.17",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.7",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-supervisor>=0.0.31",
    "numexpr>=2.14.1",
    "ollama>=0.6.1",
    "pymupdf>=1.26.7",
    "sentence-transformers>=5.2.2",
    "streamlit>=1.53.1",
    "wikipedia>=1.4.0",
    "yfinance>=1.1.0",
]
